--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/reset.css" />
     <title>Furniture-Multiview</title>
   </head>
   <body>
-    <h1>furniture 3d object to multiview</h1>
+    <input type="file" />
+    <script src="js/three.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
