redering selected obj file

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <title>Furniture-Multiview</title>
   </head>
   <body>
-    <input type="file" />
+    <input id="input" type="file" />
     <script src="js/three.js"></script>
+    <script src="js/OBJLoader.js"></script>
+    <script src="js/OrbitControls.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
