--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Furniture-Multiview</title>
   </head>
   <body>
-    <input id="input" type="file" />
+    <form>
+      <input id="input" type="file" />
+    </form>
+    <main>
+      <div id="control">
+        <label>
+          오브젝트 크기
+          <input
+            id="size"
+            type="range"
+            min="0"
+            max="3"
+            step="0.01"
+            value="0.1"
+          />
+        </label>
+        <label>
+          카메라 높이
+          <input type="range" />
+        </label>
+      </div>
+    </main>
     <script src="js/three.js"></script>
     <script src="js/OBJLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
