--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,23 @@
   </head>
   <body>
     <form>
-      <input id="input" type="file" />
+      <label>
+        obj 파일 선택
+        <input id="input" type="file" />
+      </label>
+      <label>
+        jpg 파일 선택
+        <input id="image" type="file" multiple="multiple" />
+      </label>
+      <input type="submit" value="업로드" />
     </form>
-    <main>
-      <div id="control">
-        <label>
-          오브젝트 크기
-          <input
-            id="size"
-            type="range"
-            min="0"
-            max="3"
-            step="0.01"
-            value="0.1"
-          />
-        </label>
-        <label>
-          카메라 높이
-          <input type="range" />
-        </label>
-      </div>
-    </main>
+    <div id="control">
+      <label>
+        오브젝트 크기
+        <input id="size" type="range" min="0" max="3" step="0.01" value="0.1" />
+      </label>
+    </div>
+    <main></main>
     <script src="js/three.js"></script>
     <script src="js/OBJLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
