add select furniture class

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
         jpg 파일 선택
         <input id="image" type="file" multiple="multiple" />
       </label>
+      <select name="job">
+        <option value="">가구선택</option>
+        <option value="chair">chair</option>
+        <option value="bed">bed</option>
+        <option value="table">table</option>
+        <option value="sofa">sofa</option>
+      </select>
       <input type="submit" value="업로드" />
     </form>
     <div id="control">
