change fbx to obj, mtl

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,13 @@
   </head>
   <body>
     <form method="post" enctype="multipart/form-data">
-      <label>
-        fbx 파일 선택
-        <input name="files" id="input" type="file" accept=".fbx" />
+      <label class="mtl">
+        mtl 파일 선택
+        <input name="files" id="material" type="file" accept=".mtl" />
+      </label>
+      <label class="obj">
+        obj 파일 선택
+        <input name="files" id="object" type="file" accept=".obj" />
       </label>
       <label>
         jpg 파일 선택
